assets/css/custom.css
/* ... */
@media (min-width: 1025px) and (max-width: 1199px) {
    section.tp-shop-area .tp-shop-main-wrapper .col-md-12.col-xl-6 {
        width: 50% !important;
    }
    section.tp-shop-area .tp-shop-main-wrapper .col-md-12.col-xl-6:nth-child(1) {
        margin-bottom: 24px !important;
    }
}
@media (min-width:1025px) {
    .tp-product-item .tp-product_short_description {
        display: none;
    }
}

.main-menu .router-link-active {
    color: #ED3036 !important;
}

span.tp-header-action-badge {
    display: none;
}
@media(max-width: 768px){
    .tp-product_content .tp-product_short_description {
        display: block;
    }
    .tp-product_content .tp-product_short_description ul li {
        color: rgba(240, 242, 244, 0.80);
    }
    .tp-product-item-2 {
        max-width: 390px;
    }

}
.tp-product-item-2 h3, .tp-product-item-2 h3 a {
    transition: none !important;
}

@media(max-width: 389px){
    .quick-search-container .container ul.category-links li {
        width: 100%;
        text-align: center;
    }
    .quick-search-container .container ul.category-links li a {
        width: 100%;
    }
}

